--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Firebase Data Display</h1>
     <div id="data-container">
-        <p>Loading data...</p>
+        <p>Loading data...658</p>
     </div>
 
     <!-- Load the script that fetches data from Firebase -->
